-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.3.0
-
None
-
Arch Linux x86_64
Qt 5.4.0
-
25a14aa2e28fb60084eec51d56c3b6a48c4b3bca
If you enter single or double quotes in the arguments for the run configuration, they are not preserved after switching to another run configuration and back.
For example, you may want to run an executable on the remote device detached with logging:
Alternative executable on device: sh
Arguments: -c "/tmp/helloapp 2>&1 | systemd-cat -t helloapp &"
This will work if you run it immediately but if you switch to another run configuration and back, the quotes disappear and the run configuration stops working.
| For Gerrit Dashboard: QTCREATORBUG-14002 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 106906,2 | RemoteLinux: Use QtcProcess::join() to display argument list. | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |