RemoteLinux: Use QtcProcess::join() to display argument list.

Otherwise, we lose quotes on a round-trip.

Task-number: QTCREATORBUG-14002
Change-Id: If7ecd17dfcb310aa10d9f83ddbd215c5b7136546
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>