src/plugins/remotelinux/remotelinuxrunconfigurationwidget.cpp
@@ -33,6 +33,7 @@
 
 #include <coreplugin/coreconstants.h>
 #include <utils/detailswidget.h>
+#include <utils/qtcprocess.h>
 
 #include <QCoreApplication>
 #include <QDir>
@@ -150,7 +151,8 @@ void RemoteLinuxRunConfigurationWidget::addGenericWidgets(QVBoxLayout *mainLayou
     altRemoteExeLayout->addWidget(&d->useAlternateCommandBox);
     d->genericWidgetsLayout.addRow(tr("Alternate executable on device:"), altRemoteExeWidget);
 
-    d->argsLineEdit.setText(d->runConfiguration->arguments().join(QLatin1Char(' ')));
+    d->argsLineEdit.setText(Utils::QtcProcess::joinArgs(d->runConfiguration->arguments(),
+                                                        Utils::OsTypeLinux));
     d->genericWidgetsLayout.addRow(tr("Arguments:"), &d->argsLineEdit);
 
     d->workingDirLineEdit.setPlaceholderText(tr("<default>"));
